# GCBM.InputLoader

./: .gitignore  Recliner2GCBM.sln  build_wheel.bat  gcbminputloader.pyproj  gcbminputloader.sln  package_recliner2gcbm.bat  pyproject.toml
CLI/: App.config  CLI.csproj  Program.cs
CLI/Properties/: AssemblyInfo.cs
Files/: gcbm_classic_spatial.dmm
GUI/: App.config  App.xaml  App.xaml.cs  GUI.csproj
GUI/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
GUI/View/: AddClassifierDialog.xaml  AddClassifierDialog.xaml.cs  ClassifierTab.xaml  ClassifierTab.xaml.cs  DisturbanceCategoryTab.xaml  DisturbanceCategoryTab.xaml.cs  FileProviderConfiguration.xaml  FileProviderConfiguration.xaml.cs  FinishTab.xaml  FinishTab.xaml.cs  GrowthCurveTab.xaml  GrowthCurveTab.xaml.cs  MainTab.xaml  MainTab.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  ServerProviderConfiguration.xaml  ServerProviderConfiguration.xaml.cs  TransitionRuleTab.xaml  TransitionRuleTab.xaml.cs
GUI/ViewModel/: AddClassifierDialogViewModel.cs  ClassifierTabViewModel.cs  DisturbanceCategoryTabViewModel.cs  FileProviderConfigurationViewModel.cs  FinishTabViewModel.cs  GrowthCurveTabViewModel.cs  MainWindowViewModel.cs  ServerProviderConfigurationViewModel.cs  TransitionRuleTabViewModel.cs
ProjectLoader/: App.config  ProjectLoader.csproj
ProjectLoader/Configuration/: ClassifierConfiguration.cs  DataLoaderFactory.cs  GrowthCurveClassifier.cs  GrowthCurveConfiguration.cs  ModuleConfiguration.cs  ProjectConfiguration.cs  ProjectConfigurationSerializer.cs  ProjectMode.cs  ProjectType.cs  (+4 more)
(+71 files in other folders)
