[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gcbminputloader"
version = "0.4.3"
requires-python = ">= 3.10"
dependencies = [
    "sqlalchemy",
    "pandas",
    "numpy"
]

[project.scripts]
gcbminput = "gcbminputloader.scripts.inputloader:cli"

[tool.hatch.build.targets.wheel.force-include]
"ProjectLoader/Resources" = "gcbminputloader/resources"
