[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gcbminputloader"
version = "0.4.5"
requires-python = ">= 3.10"
dependencies = [
    "sqlalchemy",
    "pandas",
    "numpy"
]

[project.scripts]
gcbminput = "gcbminputloader.scripts.inputloader:cli"

[tool.hatch.build.targets.wheel.force-include]
"ProjectLoader/Resources" = "gcbminputloader/resources"
"Files/example_loader_config.json" = "gcbminputloader/examples/example_loader_config.json"
